@@ -1,5 +1,6 @@
 package com.chep.demo.todo.service.workspace;
 
+import com.chep.demo.todo.common.cursor.CursorTokenUtils;
 import com.chep.demo.todo.domain.project.Project;
 import com.chep.demo.todo.domain.project.ProjectRepository;
 import com.chep.demo.todo.domain.user.User;
@@ -21,6 +22,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.Instant;
 import java.util.List;
+import java.util.Map;
 
 @Service
 @Transactional
@@ -206,43 +208,37 @@ public class WorkspaceService {
                         m.getStatusChangedAt()
                 )).toList();
 
-        Instant cursorJoinedAt = null;
-        Long cursorMemberId = null;
+        String nextCursor = null;
 
         if (hasNext && !resultMembers.isEmpty()) {
             WorkspaceMember lastMember = resultMembers.getLast();
-            cursorJoinedAt = lastMember.getJoinedAt();
-            cursorMemberId = lastMember.getId();
+            nextCursor = CursorTokenUtils.encode(Map.of("joinedAt", lastMember.getUser().toString(), "id", lastMember.getId()));
         }
 
         return new WorkspaceMemberCursorResponse(
                 memberResponses,
                 hasNext,
-                cursorJoinedAt,
-                cursorMemberId
+                nextCursor
         );
     }
 
     private UnifiedWorkspaceMemberCursorResponse toResponseWithCursor(List<UnifiedWorkspaceMember> resultMembers, boolean hasNext) {
-
-        Integer cursorTypePriority = null;
-        Instant cursorSortAt = null;
-        Long cursorRowId = null;
+        String nextCursor = null;
 
         if (hasNext && !resultMembers.isEmpty()) {
-            UnifiedWorkspaceMember lastMember = resultMembers.get(resultMembers.size() - 1);
+            UnifiedWorkspaceMember lastMember = resultMembers.getLast();
 
-            cursorTypePriority = lastMember.getType().getPriority();
-            cursorSortAt = lastMember.getSortAt();
-            cursorRowId = lastMember.getRowId();
+            nextCursor = CursorTokenUtils.encode(Map.of(
+                    "typePriority", lastMember.getType().getPriority(),
+                    "sortAt", lastMember.getSortAt().toString(),
+                    "rowId", lastMember.getRowId()
+            ));
         }
 
         return new UnifiedWorkspaceMemberCursorResponse(
                 resultMembers,
                 hasNext,
-                cursorTypePriority,
-                cursorSortAt,
-                cursorRowId
+                nextCursor
         );
     }
 }
